force-app/main/default/objects/CommunicationPreference__c/CommunicationPreference__c.object-meta.xml
<CustomObject>
    <label>Communication Preference</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Communication Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>