force-app/main/default/objects/CommunicationPreference__c/fields/LastOptIn__c.field-meta.xml
<CustomField>
    <fullName>LastOptIn__c</fullName>
    <label>Last opt-in</label>
    <type>DateTime</type>
</CustomField>