force-app/main/default/objects/CommunicationPreference__c/fields/LastOptOut__c.field-meta.xml
<CustomField>
    <fullName>LastOptOut__c</fullName>
    <label>Last opt-out</label>
    <type>DateTime</type>
</CustomField>