force-app/main/default/objects/CommunicationPreference__c/fields/ListId__c.field-meta.xml
<CustomField>
    <fullName>ListId__c</fullName>
    <label>List Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>