force-app/main/default/objects/CommunicationPreference__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Opt in</fullName>
                <isActive>false</isActive>
                <label>Opt in</label>
            </value>
            <value>
                <fullName>Opt out</fullName>
                <isActive>false</isActive>
                <label>Opt out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>